panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__preprocessor__include__test_include_header_with_macro_in_name.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/preprocessor/include/test_include_header_with_macro_in_name.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/include/test_include_header_with_macro_in_name.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (return (bit-or 0 1)))))

----- stderr -----
