panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__preprocessor__include__test_include_quoted_falls_back_to_bracketed.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/preprocessor/include/test_include_quoted_falls_back_to_bracketed.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/include/test_include_quoted_falls_back_to_bracketed.c"
   (typedef ptrdiff_t `typeof((subtract (cast `ptr<char>` nullptr) (cast `ptr<char>` nullptr)))`)
   (typedef size_t `typeof((sizeof `char`))`)
   (typedef max_align_t `long long`)
   (typedef wchar_t `int`)
   (typedef nullptr_t `typeof(nullptr)`)
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration xs~2 `array<int; ∅>`
            (braced
               1
               2))
         (return
            (logical-or
               (generic
                  (sizeof 42)
                  (assoc `typeof((sizeof `char`))` 0))
               (generic
                  (subtract (addressof (subscript (name xs~2 `array<int; ∅>`) 1)) (addressof (subscript (name xs~2 `array<int; ∅>`) 0)))
                  (assoc `typeof((subtract (cast `ptr<char>` nullptr) (cast `ptr<char>` nullptr)))` 1)))))))

----- stderr -----
