panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__preprocessor__include__test_stddef.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/preprocessor/include/test_stddef.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/include/test_stddef.c"
   (typedef ptrdiff_t `typeof((subtract (cast `ptr<char>` nullptr) (cast `ptr<char>` nullptr)))`)
   (typedef size_t `typeof((sizeof `char`))`)
   (typedef max_align_t `long long`)
   (typedef wchar_t `int`)
   (typedef nullptr_t `typeof(nullptr)`)
   (declaration puts~0 `fn(∅: ptr<char const>) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (declaration xs~3 `array<int; 2>` (braced ∅))
         (declaration p~4 `ptr<int>` (addressof (subscript (name xs~3 `array<int; 2>`) 0)))
         (declaration p2~5 `ptr<int const>` (addressof (subscript (name xs~3 `array<int; 2>`) 1)))
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (generic
                  (subtract (name p2~5 `ptr<int const>`) (name p~4 `ptr<int>`))
                  (assoc `typeof((subtract (cast `ptr<char>` nullptr) (cast `ptr<char>` nullptr)))` (string "it works")))))
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (generic
                  (sizeof (name xs~3 `array<int; 2>`))
                  (assoc `typeof((sizeof `char`))` (string "it works")))))
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (generic
                  (lengthof (name xs~3 `array<int; 2>`))
                  (assoc `typeof((sizeof `char`))` (string "it works")))))
         (expression (assign (name p~4 `ptr<int>`) nullptr))
         (expression
            (conditional
               nullptr
               (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
                  (string "not null"))
               (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
                  (string "null"))))
         (declaration null~6 `typeof(nullptr)` nullptr)
         (return
            (conditional
               (name null~6 `typeof(nullptr)`)
               1
               2)))))

----- stderr -----
